# BridgeTrainer

./: .gitignore  README.md  app.css  bt-firebase.js  bt-shared.js  dashboard.html  expert_review.md  firebase-config.js  firestore.rules  index.html  lead.html  p.html  pyproject.toml
bridge_trainer/: __init__.py
data/: index.json
docs/: authoring_guide.md  ben_execution_plan.md  ben_plan.md  bridge_architecture_options.md  bridge_logic_inventory.md  classification.md  combined_plan.md  core_problem_method.md  expert_panel_review_b1.md  expert_review_v2.md  firebase_setup.md  improvement_r3.md  infra_fixes_plan.md  infra_fixes_plan_round2.md  infra_fixes_plan_round3.md  knife_edge_design.md  lead_evaluator_audit.md  lead_posterior_sampling.md  lead_problem_plan.md  lead_training_modes.md  m0_results.md  plan_r2_1_empirical_mining.md  plan_r2_3_field_oracle.md  plan_r2_5_problem_compiler.md  problem_quality_concepts.md  problem_quality_concepts_round2.md  scoring_scale.md  ux_makeover_hebrew_plan.md  website_infrastructure_review.md
output/: lead1-0284459a.allsamplers.json  lead1-0284459a.json  lead1-02faf4ff.before_after.json  lead1-03473cc7.before_after.json
problems/: bal_reopen_after_2s.yaml  comp_3s_over_3h.yaml  comp_over_weak_2s.yaml  five_level_over_save.yaml  ovc_quality_1s_over_1h.yaml
scripts/: attach_notes.py  backfill_bot_notes.py  ben_rollout_context.patch  classify_incremental.py  classify_pool.py  finish_b2.py  generate_and_push_bidding.sh  generate_and_push_leads.sh  judge_docs.py  judge_fixed.py  lead_before_after.py  m0_spike.py  setup_ben.sh  (+5 more)
(+1892 files in other folders)
