[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-trainer"
version = "0.1.0"
description = "Personal trainer for borderline/competitive bridge bidding decisions (2/1)"
requires-python = ">=3.11"
dependencies = [
    "endplay>=0.5",
    "numpy>=1.26",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
trainer = "bridge_trainer.app.cli:main"

[tool.setuptools.packages.find]
include = ["bridge_trainer*"]

[tool.setuptools.package-data]
bridge_trainer = ["**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
